--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "api-gen" : "ng-openapi-gen --input ./src/open-api/open-api.json --output ./src/app/services"
   },
   "private": true,
   "dependencies": {
