--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "api-gen" : "ng-openapi-gen --input ./src/open-api/open-api.json --output ./src/app/services"
+    "api-gen": "ng-openapi-gen --input ./src/open-api/open-api.json --output ./src/app/services"
   },
   "private": true,
   "dependencies": {
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "angular-code-input": "^2.0.0",
     "bootstrap": "^5.3.3",
     "ng-openapi-gen": "^0.52.0",
     "rxjs": "~7.8.0",
