--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "api-gen": "ng-openapi-gen --input ./src/open-api/open-api.json --output ./src/app/services"
+    "api-gen": "ng-openapi-gen --input ./src/open-api/open-api.json --output ./src/app/services",
+    "compodoc": "npx compodoc -p tsconfig.doc.json",
+    "compodoc-serve": "npx compodoc -s"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +21,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@compodoc/compodoc": "^1.1.26",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "angular-code-input": "^2.0.0",
     "bootstrap": "^5.3.3",
