--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "@compodoc/compodoc": "^1.1.26",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "angular-code-input": "^2.0.0",
